Fixes to get it to work against real life
Getting it working against the spec is one thing, it's another to get it to work with the real app. Fixes include:

* `work_orders` should be `workOrders`
* Make sure repairs create a reference on create
* fix strong params on workOrders
* return 200, not 201 on create
* make sure all URLs are lowercase
