# config/routes.rb
@@ -3,12 +3,12 @@ Rails.application.routes.draw do
   resources :work_orders, only: [] do
     member do
       get :available_appointments
-      get :Appointments, action: :show_appointment
-      post :Appointments, action: :create_appointment
+      get :appointments, action: :show_appointment
+      post :appointments, action: :create_appointment
     end
   end
-  get '/Properties/:id', to: 'properties#show'
-  get '/Properties', to: 'properties#find'
+  get '/properties/:id', to: 'properties#show'
+  get '/properties', to: 'properties#find'
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
   # For details on the DSL available within this file, see http://guides.rubyonrails.org/routing.html
